# microalephs

./: Cargo.toml  README.md
black-pill-c/: Cargo.toml
black-pill-c/src/: images.rs  main.rs
e_ink_gallery_maker/src/: main.rs
e_ink_hello/: Cargo.toml
e_ink_hello/.cargo/: config.toml
e_ink_hello/src/: main.rs
images/: binary-png-to-raw-gray.sh  bmpifyb.sh  convert-resize.sh  ferris.raw  randomizer.sh
images/128x64/: 002.gray  003.gray  004.gray  005.gray  007.gray  008.gray  009.gray  012.gray  014.gray  015.gray  018.gray  019.gray  020.gray  021.gray  022.gray  023.gray  024.gray  025.gray  026.gray  029.gray  030.gray  031.gray  032.gray  033.gray  035.gray  037.gray  040.gray  043.gray  044.gray  045.gray  046.gray  047.gray  048.gray  049.gray  052.gray  053.gray  054.gray  055.gray  056.gray  057.gray  (+108 more)
images/64x128r90/: 001.gray  002.gray  003.gray  004.gray  005.gray  006.gray  007.gray  008.gray  010.gray  011.gray  012.gray  013.gray  014.gray  015.gray  016.gray  017.gray  018.gray  019.gray  020.gray  021.gray  022.gray  023.gray  024.gray  025.gray  026.gray  027.gray  028.gray  029.gray  030.gray  031.gray  032.gray  033.gray  034.gray  035.gray  036.gray  037.gray  038.gray  039.gray  040.gray  041.gray  (+230 more)
src/: main.rs
stm32f3discovery_ssd1306/: Cargo.toml
stm32f3discovery_ssd1306/src/: main.rs
stm32f401cc_ssd1306/: Cargo.toml
stm32f401cc_ssd1306/src/: main.rs
stm32f411ce_ssd1306/: Cargo.toml
stm32f411ce_ssd1306/.cargo/: config
stm32f411ce_ssd1306/src/: images.rs  main.rs  main.rs.sav
