[package]
name = "blue-pill-quickstart"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
embedded-graphics = "0.7.1"
ssd1306 = "0.7.1"
stm32f3xx-hal = { version = "0.9.1", features = ["ld", "rt", "stm32f303xc" ] }
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"
embedded-sdmmc = "0.3.0"
heapless = "0.7.16"
