[package]
name = "black-pill-qs"
version = "0.1.0"
authors = ["Brian Balllantine <>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2"
nb="1"
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"
embedded-graphics = "0.7.1"
ssd1306 = "0.7.1"
stm32f4xx-hal = { version = "0.13.2", features = ["stm32f411"] }
fugit = "0.3.6"
heapless = "0.7.16"
